@@ -25,7 +25,7 @@ public class AutoSyncConfigService {
   private final AutoSyncConfigMapper autoSyncConfigMapper; // MapStruct 인터페이스 주입
 
   @Transactional
-  public AutoSyncConfigDto create(IndexInfo indexInfo) { // 변수명 indexInfoId -> indexInfo로 수정 (객체를 받으므로)
+  public AutoSyncConfigDto create(IndexInfo indexInfo) {
     if (indexInfo == null) {
       throw new IllegalArgumentException("지수 정보가 존재하지 않습니다.");
     }
@@ -37,14 +37,14 @@ public class AutoSyncConfigService {
   }
 
   @Transactional
-  public AutoSyncConfigDto update(Integer id, AutoSyncConfigUpdateRequest request) {
+  public AutoSyncConfigDto update(Long id, AutoSyncConfigUpdateRequest request) {
     AutoSyncConfig autoSyncConfig = getAutoSyncConfig(id);
     autoSyncConfig.updateEnabled(request.isEnabled());
 
     return autoSyncConfigMapper.toDto(autoSyncConfig);
   }
 
-  private AutoSyncConfig getAutoSyncConfig(Integer id) {
+  private AutoSyncConfig getAutoSyncConfig(Long id) {
     return autoSyncConfigRepository.findById(id)
         .orElseThrow(() -> new NoSuchElementException("존재하지 않는 자동 연동 설정입니다. ID: " + id));
   }
@@ -90,9 +90,7 @@ public class AutoSyncConfigService {
     }
 
     // 5. Entity -> DTO 변환
-    List<AutoSyncConfigDto> dtoList = configs.stream()
-        .map(autoSyncConfigMapper::toDto)
-        .collect(java.util.stream.Collectors.toList());
+    List<AutoSyncConfigDto> dtoList = configs.stream().map(autoSyncConfigMapper::toDto).toList();
 
     // 6. 다음 페이지 요청 시 사용할 cursor와 nextIdAfter 값 추출
     String nextCursor = null;
@@ -102,7 +100,7 @@ public class AutoSyncConfigService {
       AutoSyncConfigDto lastItem = dtoList.get(dtoList.size() - 1);
 
       // AutoSyncConfigDto의 id가 Integer이므로 Long으로 안전하게 변환
-      nextIdAfter = lastItem.getId() != null ? Long.valueOf(lastItem.getId()) : null;
+      nextIdAfter = lastItem.getId() != null ? lastItem.getId() : null;
 
       if ("enabled".equals(condition.getSortField())) {
         nextCursor = String.valueOf(lastItem.isEnabled());
